uso de funciones en python

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxX1GQE01OZr4C/g4cTYbD",
+      "authorship_tag": "ABX9TyNWJRlSi/f0UYGkiRpp1DR/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -264,6 +264,109 @@
             "08/08/2025 Regresamos a clases\n",
             "Dime tu fecha de nacimiento en formato d-m-Y: 07-11-2005\n",
             "2005-11-07 00:00:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FUNCIONES EN PYTHON"
+      ],
+      "metadata": {
+        "id": "YLMy5nnhXGf3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def suma(num1, num2):\n",
+        "  return num1 + num2"
+      ],
+      "metadata": {
+        "id": "EkoIbqgEXKzP"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"La suma de 5 + 8 = \", suma(5,8))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CyM0NcReXxwJ",
+        "outputId": "4a747289-23df-40d5-ff7b-38e79cc6f2fb"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma de 5 + 8 =  10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"num1: \"))\n",
+        "num2 = float(input(\"num2: \"))\n",
+        "respuesta = suma(num1,num2)\n",
+        "print (\"la suma es:\", respuesta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pX0cM0k9YY_e",
+        "outputId": "a1b526bc-c115-4adf-d288-53c9ab6e58bb"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "num1: 2\n",
+            "num2: 3\n",
+            "la suma es: 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def resta(num1, num2):\n",
+        "  return num1 - num2\n",
+        "\n",
+        "num1 = float(input(\"ingrese el primer numero: \"))\n",
+        "num2 = float(input(\"ingrese el segundo numero: \"))\n",
+        "respuesta = resta(num1,num2)\n",
+        "print (\"la resta es:\", respuesta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7tE7C8GOYqnc",
+        "outputId": "fd87a0df-7dd9-4e2b-cedf-8e66ec4103b8"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese el primer numero: 2\n",
+            "ingrese el segundo numero: 2\n",
+            "la resta es: 0.0\n"
           ]
         }
       ]
