practica de funciones

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWJRlSi/f0UYGkiRpp1DR/",
+      "authorship_tag": "ABX9TyPTXA1dqePisTMXkdFc5yTM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,7 @@
         "id": "UhBqLxmINUSJ",
         "outputId": "9017f8d9-0ead-485c-bd46-d93e06db2198"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "PnP-7ukHTU9t",
         "outputId": "e2aa2fa0-9d0e-41fb-8562-ef8e25c03668"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "EkoIbqgEXKzP"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "id": "CyM0NcReXxwJ",
         "outputId": "4a747289-23df-40d5-ff7b-38e79cc6f2fb"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         "id": "pX0cM0k9YY_e",
         "outputId": "a1b526bc-c115-4adf-d288-53c9ab6e58bb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
         "id": "7tE7C8GOYqnc",
         "outputId": "fd87a0df-7dd9-4e2b-cedf-8e66ec4103b8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,6 +367,220 @@
             "ingrese el primer numero: 2\n",
             "ingrese el segundo numero: 2\n",
             "la resta es: 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hacer un ejercicios e python haciendo uso de las funciones de usuario, que convierta grados celcius a farenheit."
+      ],
+      "metadata": {
+        "id": "R3cvQ99MUyTP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def celciusFarenheit(c):\n",
+        "  return c*1.8 + 32\n",
+        "c = int (input(\"Grados c: \"))\n",
+        "f = celciusFarenheit(c)\n",
+        "print(\"F:\", f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "580-RWL0Ya3b",
+        "outputId": "8ffbe01a-df6a-4679-d10e-bdf3224c28dd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Grados c: 38\n",
+            "F: 100.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hacer un ejercicios e python haciendo uso de las funciones de usuario, que convierta grados farenheit a celcius."
+      ],
+      "metadata": {
+        "id": "DthFW0AsfgUV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def FarenheitCelcius(f):\n",
+        "  return (f-32) * 5/9\n",
+        "f = float(input(\"Grados f: \"))\n",
+        "c = FarenheitCelcius(f)\n",
+        "print(\"C:\", c)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c26JDB9yZtUB",
+        "outputId": "eea64ff5-1fc9-4f28-b37c-99206cdaba32"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Grados f: 100.4\n",
+            "C: 38.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hacer un ejercicios e python haciendo uso de las funciones de usuario, que convierta grados celcius a Kalvin"
+      ],
+      "metadata": {
+        "id": "AsBED9apfHbm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CelciusKalvin(c):\n",
+        "  return (c + 273.15)\n",
+        "c = float(input(\"Grados c: \"))\n",
+        "k = CelciusKalvin(c)\n",
+        "print(\"K:\", k)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZPgAZfhbfk3V",
+        "outputId": "b38eb8e2-87d9-4a9e-f8e2-861b4e0036e9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Grados c: 32\n",
+            "K: 305.15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " #hacer ejercicio de python haciendo uso de funciones de usuario, que calcule\n",
+        " #el sueldo de u empleado, segun el numero de hrs trabajadas y el valor por hora"
+      ],
+      "metadata": {
+        "id": "gAjbRjgLhfSX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sueldo(numHrs, valorXhr):\n",
+        "  sueldo = numHrs * valorXhr * 30\n",
+        "  return sueldo\n",
+        ""
+      ],
+      "metadata": {
+        "id": "pO03nW4ihzp6"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numHrs = float(input(\"Horas trabajadas: \"))\n",
+        "valorXhr = float(input(\"Valor por hora: \"))\n",
+        "sueldo = sueldo(numHrs, valorXhr)\n",
+        "print(\"Sueldo: \", sueldo)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qX-NxLqcj6Lo",
+        "outputId": "ec1cfc58-2fcb-4525-f9f3-8c940285f888"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Horas trabajadas: 5\n",
+            "Valor por hora: 3\n",
+            "Sueldo:  450.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " #hacer ejercicio de python haciendo uso de funciones de usuario, que permta elevar un numero a un exponete"
+      ],
+      "metadata": {
+        "id": "Uj-8Wb9VkHBR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def expoenciacion (b,e):\n",
+        "  return b ** e\n",
+        "\n",
+        "b = float(input(\"Base: \"))\n",
+        "e = float(input(\"Exponente: \"))\n",
+        "\n",
+        "respuesta = expoenciacion(b,e)\n",
+        "print(\"El numero: \",b, \"elevado a\", e,\"La respuesta es: \", respuesta)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CIRk2RUZkQx5",
+        "outputId": "44c46cbd-d6a8-4299-dd70-0f2886b2535f"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Base: 8\n",
+            "Exponente: 3\n",
+            "El numero:  8.0 elevado a 3.0 La respuesta es:  512.0\n"
           ]
         }
       ]
