usando funciones lambda y preconstruidas con map, filter y reduce

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTXA1dqePisTMXkdFc5yTM",
+      "authorship_tag": "ABX9TyN+1/1PpKRrlA0xOCAgyp3W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -505,13 +505,12 @@
       "source": [
         "def sueldo(numHrs, valorXhr):\n",
         "  sueldo = numHrs * valorXhr * 30\n",
-        "  return sueldo\n",
-        ""
+        "  return sueldo\n"
       ],
       "metadata": {
         "id": "pO03nW4ihzp6"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +528,7 @@
         "id": "qX-NxLqcj6Lo",
         "outputId": "ec1cfc58-2fcb-4525-f9f3-8c940285f888"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +571,7 @@
         "id": "CIRk2RUZkQx5",
         "outputId": "44c46cbd-d6a8-4299-dd70-0f2886b2535f"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,6 +580,337 @@
             "Base: 8\n",
             "Exponente: 3\n",
             "El numero:  8.0 elevado a 3.0 La respuesta es:  512.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**FUNCIONES ANONIMAS**"
+      ],
+      "metadata": {
+        "id": "YccMqKDfP2OS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def suma(a,b):\n",
+        "  return a+b\n",
+        "\n",
+        "a = float(input(\"num1: \"))\n",
+        "b = float(input(\"num2: \"))\n",
+        "\n",
+        "suma = suma(a,b)\n",
+        "print(\"La suma es: \", suma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_7cfuxQP6pQ",
+        "outputId": "f96a4221-adbe-4d71-a0aa-ee734ebf8b27"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "num1: 4\n",
+            "num2: 4\n",
+            "La suma es:  8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = float(input(\"num1: \"))\n",
+        "B = float(input(\"num2: \"))\n",
+        "\n",
+        "sum = lambda A,B: A+B\n",
+        "print( \"La suma de\", A , \"mas b\", B, \"es igual\", sum(A,B) )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5C5ykIf8QYNq",
+        "outputId": "70c93f7d-8fbc-474d-9cd9-bee9f86452eb"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "num1: 2\n",
+            "num2: 3\n",
+            "La suma de 2.0 mas b 3.0 es igual 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FUNCIONES PRECONSTRUIDAS"
+      ],
+      "metadata": {
+        "id": "JQVJkZBOTEXS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def extraerPrimeraLetra(dia):\n",
+        "  return dia[0]\n",
+        "\n",
+        "\n",
+        "#map\n",
+        "semana = [\"Domingo\", \"Lunes\", \"Martes\", \"Miercoles\", \"Jueves\", \"Viernes\", \"Sabado\"]\n",
+        "\n",
+        "primeraLetraDia = map(lambda dia: dia[0], semana)\n",
+        "print(list(primeraLetraDia))\n",
+        "\n",
+        "mayusSemana = map(lambda dia: dia.upper(), semana)\n",
+        "print(list(mayusSemana))\n",
+        "\n",
+        "print( list(map(extraerPrimeraLetra, semana)) )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WXfMlgiETH81",
+        "outputId": "31c18a55-4012-404c-bdb3-f48d2e3ef004"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['D', 'L', 'M', 'M', 'J', 'V', 'S']\n",
+            "['DOMINGO', 'LUNES', 'MARTES', 'MIERCOLES', 'JUEVES', 'VIERNES', 'SABADO']\n",
+            "['D', 'L', 'M', 'M', 'J', 'V', 'S']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [2,4,6,8,7,9]\n",
+        "potencia = int(input(\"Potencia: \"))\n",
+        "numeroPotencia = map(lambda num: num**potencia, numeros)\n",
+        "\n",
+        "print(list(numeroPotencia))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oxiHIlFJnghN",
+        "outputId": "a7306623-cbb6-4b36-e7e3-f9bfd792517d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Potencia: 4\n",
+            "[16, 256, 1296, 4096, 2401, 6561]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ntabla  = int(input(\"Tabla:\"))\n",
+        "numeros = [1,2,3,4,5,6,7,8,9,10]\n",
+        "tabla = map(lambda num: num*ntabla, numeros)\n",
+        "\n",
+        "print(list(tabla))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mCYa_GmLoABn",
+        "outputId": "d5e9152f-2c3e-42df-c29c-b3212eff7fa0"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabla:2\n",
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "serie = [5,6,9,2,7,8]\n",
+        "pares = filter(lambda num: num%2==0, serie) #% ===> a modulo, obtener el residuo.\n",
+        "\n",
+        "print(list(pares))\n",
+        "\n",
+        "impares = filter(lambda num: num%2!=0, serie)\n",
+        "\n",
+        "print(list(impares))\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6sPs6USnoeI3",
+        "outputId": "07966ee1-a1bb-4a52-8649-2e2a1873786e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 2, 8]\n",
+            "[5, 9, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "serieUser = input(\"Serie: \") # \"5,2,8,1\" --> serie[0]=\"5\"; serie[1]=\"2\"; etc..\n",
+        "serieUser = serieUser.split(\",\")\n",
+        "\n",
+        "pares = filter(lambda num: int(num)%2==0, serieUser)\n",
+        "impares = filter(lambda num: int(num)%2!=0, serieUser)\n",
+        "\n",
+        "print(\"Pares: \",list(pares))\n",
+        "print(\"Impares: \", list(impares))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5HF7xLSxovoa",
+        "outputId": "5d763edc-d1b3-4155-b89c-c10ba2fa20ba"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Serie: 3,4,5,6,2,1,5\n",
+            "Pares:  ['4', '6', '2']\n",
+            "Impares:  ['3', '5', '1', '5']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hacer un ejercicio en python usando la funcion filter y lambda que de una seria de notas introducidas por el usuario, establezca cuantos pasan la materia (>6) y cuantos se quedan (<6)."
+      ],
+      "metadata": {
+        "id": "d17Qwo6fpIle"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "notas = input(\"Ingrese las notas de los alumnos: \")\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "\n",
+        "    notas = [float(nota.strip()) for nota in notas.split(',')]\n",
+        "    aprobados = list(filter(lambda nota: nota > 6, notas))\n",
+        "\n",
+        "    reprobados = list(filter(lambda nota: nota < 6, notas))\n",
+        "\n",
+        "\n",
+        "    nota_seis = list(filter(lambda nota: nota == 6, notas))\n",
+        "\n",
+        "    print(\"\\n--- Resumen de Notas ---\")\n",
+        "    print(f\"Notas ingresadas: {notas}\")\n",
+        "    print(f\"Alumnos que aprobaron: {len(aprobados)} (Notas: {aprobados})\")\n",
+        "    print(f\"Alumnos que reprobaron: {len(reprobados)} (Notas: {reprobados})\")\n",
+        "\n",
+        "except ValueError:\n",
+        "    print(\"Error: Asegúrate de ingresar solo números separados por comas.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xaqnjdOzo6UC",
+        "outputId": "916db38d-b1c9-4433-8e36-1cc8c290be3d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese las notas de los alumnos: 7, 5, 4, 7, 8, 10\n",
+            "\n",
+            "--- Resumen de Notas ---\n",
+            "Notas ingresadas: [7.0, 5.0, 4.0, 7.0, 8.0, 10.0]\n",
+            "Alumnos que aprobaron: 4 (Notas: [7.0, 7.0, 8.0, 10.0])\n",
+            "Alumnos que reprobaron: 2 (Notas: [5.0, 4.0])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#reduce\n",
+        "from functools import reduce\n",
+        "\n",
+        "numeros = [5,4,9,6,8,2,3]\n",
+        "suma = reduce(lambda num, acum: num+acum, numeros)\n",
+        "\n",
+        "sumaPares = reduce(lambda num, acum: num+acum, filter(lambda num: num%2==0, numeros))\n",
+        "sumaPar = reduce(lambda num, acum: acum + num if num%2==0 else 0, numeros) #pendiente de revisar...\n",
+        "\n",
+        "print(\"La suma es: \", suma)\n",
+        "print(\"La suma de los pares es: \", sumaPares)\n",
+        "print(\"Suma Pares: \", sumaPar)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fexeEYDIpVgH",
+        "outputId": "a17aab10-f5df-4d9e-dd03-c1d22a4bbf00"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma es:  37\n",
+            "La suma de los pares es:  20\n",
+            "Suma Pares:  13\n"
           ]
         }
       ]
