--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+1/1PpKRrlA0xOCAgyp3W",
+      "authorship_tag": "ABX9TyNuu3CFvQvZPRB7Q8INZvpz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -612,7 +612,7 @@
         "id": "Y_7cfuxQP6pQ",
         "outputId": "f96a4221-adbe-4d71-a0aa-ee734ebf8b27"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +641,7 @@
         "id": "5C5ykIf8QYNq",
         "outputId": "70c93f7d-8fbc-474d-9cd9-bee9f86452eb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
         "id": "WXfMlgiETH81",
         "outputId": "31c18a55-4012-404c-bdb3-f48d2e3ef004"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +717,7 @@
         "id": "oxiHIlFJnghN",
         "outputId": "a7306623-cbb6-4b36-e7e3-f9bfd792517d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +745,7 @@
         "id": "mCYa_GmLoABn",
         "outputId": "d5e9152f-2c3e-42df-c29c-b3212eff7fa0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,8 +767,7 @@
         "\n",
         "impares = filter(lambda num: num%2!=0, serie)\n",
         "\n",
-        "print(list(impares))\n",
-        ""
+        "print(list(impares))\n"
       ],
       "metadata": {
         "colab": {
@@ -777,7 +776,7 @@
         "id": "6sPs6USnoeI3",
         "outputId": "07966ee1-a1bb-4a52-8649-2e2a1873786e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +808,7 @@
         "id": "5HF7xLSxovoa",
         "outputId": "5d763edc-d1b3-4155-b89c-c10ba2fa20ba"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,6 +829,41 @@
       "metadata": {
         "id": "d17Qwo6fpIle"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#reduce\n",
+        "from functools import reduce\n",
+        "numeros = [5,4,9,6,8,2,3]\n",
+        "suma = reduce(lambda num, acum: num+acum, numeros)\n",
+        "\n",
+        "sumaPares = reduce(lambda acum, num: acum + num, filter(lambda num: num%2==0, numeros))\n",
+        "sumaPar = reduce(lambda acum, num: acum + num if num%2==0 else acum, numeros,0)\n",
+        "\n",
+        "print(\"La suma es: \", suma)\n",
+        "print(\"La suma de los pares es: \", sumaPares)\n",
+        "print(\"Suma Pares: \", sumaPar)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QSvu7cQQbE5W",
+        "outputId": "976a439b-6d75-4000-f4e3-1d83854ebeb3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma es:  37\n",
+            "La suma de los pares es:  20\n",
+            "Suma Pares:  20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -861,20 +895,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xaqnjdOzo6UC",
-        "outputId": "916db38d-b1c9-4433-8e36-1cc8c290be3d"
+        "outputId": "dedfdd3d-83b6-4467-f283-6d14b9e01bb6"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese las notas de los alumnos: 7, 5, 4, 7, 8, 10\n",
+            "Ingrese las notas de los alumnos: 2,3,4,4,5,8,9\n",
             "\n",
             "--- Resumen de Notas ---\n",
-            "Notas ingresadas: [7.0, 5.0, 4.0, 7.0, 8.0, 10.0]\n",
-            "Alumnos que aprobaron: 4 (Notas: [7.0, 7.0, 8.0, 10.0])\n",
-            "Alumnos que reprobaron: 2 (Notas: [5.0, 4.0])\n"
+            "Notas ingresadas: [2.0, 3.0, 4.0, 4.0, 5.0, 8.0, 9.0]\n",
+            "Alumnos que aprobaron: 2 (Notas: [8.0, 9.0])\n",
+            "Alumnos que reprobaron: 5 (Notas: [2.0, 3.0, 4.0, 4.0, 5.0])\n"
           ]
         }
       ]
@@ -902,7 +936,7 @@
         "id": "fexeEYDIpVgH",
         "outputId": "a17aab10-f5df-4d9e-dd03-c1d22a4bbf00"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,6 +945,82 @@
             "La suma es:  37\n",
             "La suma de los pares es:  20\n",
             "Suma Pares:  13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TUPLAS**"
+      ],
+      "metadata": {
+        "id": "wDcAZcaPe9jm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tupla = (1,2,3,4,5)\n",
+        "#print[0]=1\n",
+        "print (\"Tupla:\", tupla, \"Primer elemento:\", tupla[0], \"El Numero cinco parece \", tupla.count(5))\n",
+        "print (\"Ultimo elemento: \", tupla[-1])\n",
+        "print(\"Rango: \", tupla [0:5])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tSluUxMRfGQD",
+        "outputId": "447b1b6a-7f92-4bf0-8156-f77c89bcb19d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tupla: (1, 2, 3, 4, 5) Primer elemento: 1 El Numero cinco parece  1\n",
+            "Ultimo elemento:  5\n",
+            "Rango:  (1, 2, 3, 4, 5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "fecha = datetime.date.today()\n",
+        "\n",
+        "semana = (\"Domingo\", \"Lunes\", \"Martes\", \"Miercoles\", \"Jueves\", \"Viernes\", \"Sabado\")\n",
+        "meses = (\"\",\"Enero\", \"Febrero\", \"Marzo\", \"Abril\", \"Mayo\", \"Junio\", \"Julio\", \"Agosto\", \"Septiembre\", \"Octubre\", \"Noviembre\", \"Diciembre\")\n",
+        "\n",
+        "dia = fecha.day\n",
+        "mes = fecha.month\n",
+        "year = fecha.year\n",
+        "diaSemana = semana[fecha.isoweekday()]\n",
+        "\n",
+        "print(diaSemana, dia, \"de\", meses[mes], \"del\", year)\n",
+        "print(fecha, fecha.isoweekday(), diaSemana)\n",
+        "print(dia, mes, year)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nypmnpKwimXK",
+        "outputId": "3597e9d2-3c70-458b-d621-d10426fa2125"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Martes 12 de Agosto del 2025\n",
+            "2025-08-12 2 Martes\n",
+            "12 8 2025\n"
           ]
         }
       ]
