--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuu3CFvQvZPRB7Q8INZvpz",
+      "authorship_tag": "ABX9TyOrQpdBv8RwwUAXCyqy4LJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1024,6 +1024,82 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LISTAS"
+      ],
+      "metadata": {
+        "id": "MGnvhf1Gl-EQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [5,8,9,4, \"Progra III\", True, [4,8,9,[8,9,4]]]\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SG2zHy5-l9K0",
+        "outputId": "9850e664-da9b-46f8-e1ac-994d8b3ecd70"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 8, 9, 4, 'Progra III', True, [4, 8, 9, [8, 9, 4]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Hacer un ejercicios en python que otenga la nota final de progra II del computo I, haciendo uso de las listas y de las tuplas\n",
+        "def calcularPromedio(nota, notas):\n",
+        "  return notas[1]*notas[2]+ nota\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "notas = [[\"Lab1\", 10, 0.3],[\"Lab2\", 10,0.3],[\"Parcial\",10,0.4]]\n",
+        "prom = reduce(calcularPromedio, notas, 0)\n",
+        "print(\"Nota Final: \", prom)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GmMXFhRLnMoH",
+        "outputId": "320be9a8-0c50-4e77-c855-3dfd0cec7167"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nota Final:  10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_nota(notas):\n",
+        "  final ="
+      ],
+      "metadata": {
+        "id": "PSbvFa-Qqt9K"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
